# airspace

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  publish-container.yml
backend/: alembic.ini  pyproject.toml
backend/airspace/: __init__.py  aircraft.py  aircraft_photos.py  auth.py  config.py  database.py  detection.py  entrypoint.py  generate_vapid.py  geocoding.py  main.py  migrations.py  models.py  notifications.py  origin.py  polling.py  providers.py  rate_limit.py  retention.py  schemas.py  subscriptions.py  tracking.py  worker.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py
backend/scripts/: update_icao_helicopter_codes.py
backend/tests/: test_aircraft.py  test_aircraft_photos.py  test_api.py  test_detection.py  test_entrypoint.py  test_notifications.py  test_origin.py  test_provider_polling.py  test_rate_limit.py  test_retention.py  test_tracking.py  test_worker.py
custom_components/whats_that_plane/: __init__.py  manifest.json
docs/: PWA_INSTALLATION_VERIFICATION.md  anonymous-profiles.md  architecture.md  audit.md  docker-deployment.md  migration-from-home-assistant.md  notifications.md  privacy.md  provider-behavior.md  regional-polling.md  security.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json
frontend/public/: manifest.webmanifest  sw.js
frontend/src/: api.test.ts  api.ts  main.tsx  sightings.test.ts  sightings.ts  style.css
frontend/src/components/: AddressSearch.tsx  AdminApp.tsx  AppHeader.tsx  (+7 more)
(+12 files in other folders)
