[project]
name = "airspace"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<0.117", "uvicorn[standard]>=0.35,<0.36",
  "sqlalchemy>=2.0.41,<2.1", "pydantic-settings>=2.10,<3",
  "httpx>=0.28,<0.29", "argon2-cffi>=25.1,<26", "pywebpush>=2.0,<3",
  "cryptography>=45,<50", "tzdata>=2025.2", "alembic>=1.16,<2"
]
[project.optional-dependencies]
dev = ["pytest>=8.4,<9", "pytest-asyncio>=1.1,<2", "ruff>=0.12,<0.13", "mypy>=1.17,<2"]
[tool.pytest.ini_options]
testpaths = ["tests"]
[tool.ruff]
line-length = 100
[tool.mypy]
python_version = "3.12"

[tool.setuptools.packages.find]
include = ["airspace*"]
exclude = ["migrations*"]
